# lampa-bookmarks-collections-manager

./: .gitignore  AGENTS.md  README.md  pyproject.toml  skill.md
.agent/memory-bank/: architecture.md  progress.md  tech-stack.md
.agent/skills/: add-to-lampa.md
config/: settings.json
examples/: add_items.py  agent_tool.py  bulk_add_movies.py  create_collection.py  list_collections.py  login.py
src/: __init__.py  auth.py  client.py  search.py  utils.py
src/lampa_cli/: __init__.py  client.py  models.py  search.py  utils.py
src/lampa_cli/cli/: __init__.py  _output.py  auth.py  backup.py  bookmarks.py  collections.py  items.py
